fixed overflow on result

--- a/Client/src/components/Main/Main.css
+++ b/Client/src/components/Main/Main.css
@@ -271,6 +271,9 @@
     }
     .result{
         overflow-x: hidden;
+        white-space: normal;      /* key fix */
+  word-wrap: break-word;    /* breaks long words */
+  overflow-wrap: anywhere; 
     }
     .main .nav::before {
         content: "";
